--- a/cv.tex
+++ b/cv.tex
@@ -45,7 +45,7 @@ Citizenship: Russian Federation. Not~married.
      graduate student
      \item Mar.~--- Aug.~2016 \hspace{2mm} Laboratory of Algebraic Geometry
 	and Its Applications, research intern
-     \item 2015--- \hspace{2mm} Independent University of Moscow,
+     \item 2015---2021 \hspace{2mm} Independent University of Moscow,
      graduate student
 \end{itemize}
 
