--- a/cv.tex
+++ b/cv.tex
@@ -19,7 +19,7 @@
 \begin{description}
 
 \item[Personal data:]  Born in Saratov, Russian Federation, July 7, 1995. 
-Citizenship: Russian Federation. Not~married.
+Citizenship: Russian Federation. Engaged, not~married.
 
 \item[Work mailing address:] \'Sniadeckich 8,  Warszawa,  Polska 00-656
 
