--- a/cv.tex
+++ b/cv.tex
@@ -78,8 +78,8 @@ Citizenship: Russian Federation. Engaged, not~married.
      Vol.  405,  27 Aug.  2022,  108479,  arXiv:2011.00469.
      %\item Rodion D\'eev,  Vasily Rogov.  {\em Holomorphic families of knots},  in 
      %preparation
-     \item Anna Abasheva,  Rodion D\'eev.  {\em Surfaces with many algebraic 
-     structures},  in preparation
+     \item Anna Abasheva,  Rodion D\'eev.  {\em Complex surfaces with many 
+     algebraic  structures} (2023),  arXiv:2303.10764
      \item Rodion D\'eev,  Micha\l~Kapustka.  {\em Bizarre contractions and 
      relative isogenies},  in preparation
 \end{itemize}
