--- a/cv.tex
+++ b/cv.tex
@@ -23,8 +23,8 @@ Citizenship: Russian Federation. Engaged, not~married.
 
 \item[Work mailing address:] \'Sniadeckich 8,  Warszawa,  Polska 00-656
 
-\item[Home address:] 2ya Sadovaya ul. 65/71-11, Saratov, Russia,
-410052.
+%\item[Home address:] 2ya Sadovaya ul. 65/71-11, Saratov, Russia,
+%410052.
 
 \item[E-mail:] {\tt rdeev[]impan.pl}
 
