--- a/cv.tex
+++ b/cv.tex
@@ -19,7 +19,7 @@
 \begin{description}
 
 \item[Personal data:]  Born in Saratov, Russian Federation, July 7, 1995. 
-Citizenship: Russian Federation. Engaged, not~married.
+Citizenship: Russian Federation. Married,  no children.
 
 \item[Work mailing address:] \'Sniadeckich 8,  Warszawa,  Polska 00-656
 
@@ -79,7 +79,7 @@ Citizenship: Russian Federation. Engaged, not~married.
      %\item Rodion D\'eev,  Vasily Rogov.  {\em Holomorphic families of knots},  in 
      %preparation
      \item Anna Abasheva,  Rodion D\'eev.  {\em Complex surfaces with many 
-     algebraic  structures} (2023),  arXiv:2303.10764
+     algebraic  structures} (2023),  arXiv:2303.10764,  submitted to IMRN
      \item Rodion D\'eev,  Micha\l~Kapustka.  {\em Bizarre contractions and 
      relative isogenies},  in preparation
 \end{itemize}
