--- a/cv.tex
+++ b/cv.tex
@@ -80,8 +80,8 @@ Citizenship: Russian Federation. Married,  no children.
      %preparation
      \item Anna Abasheva,  Rodion D\'eev.  {\em Complex surfaces with many 
      algebraic  structures} (2023),  arXiv:2303.10764,  submitted to IMRN
-     \item Rodion D\'eev,  Micha\l~Kapustka.  {\em Bizarre contractions and 
-     relative isogenies},  in preparation
+     \item Rodion D\'eev,  Micha\l~Kapustka.  {\em Rational curves with unexpected
+     behaviour},  in preparation
 \end{itemize}
 
 \item[Research interests:] transcendental methods in algebraic geometry, 
