--- a/cv.tex
+++ b/cv.tex
@@ -79,7 +79,7 @@ Citizenship: Russian Federation. Married,  no children.
      %\item Rodion D\'eev,  Vasily Rogov.  {\em Holomorphic families of knots},  in 
      %preparation
      \item Anna Abasheva,  Rodion D\'eev.  {\em Complex surfaces with many 
-     algebraic  structures} (2023),  arXiv:2303.10764,  submitted to IMRN
+     algebraic  structures} (2023),  arXiv:2303.10764,  to appear in IMRN
      \item Rodion D\'eev,  Micha\l~Kapustka.  {\em Rational curves with unexpected
      behaviour},  in preparation
 \end{itemize}
