--- a/cv.tex
+++ b/cv.tex
@@ -3,10 +3,10 @@
 
 \pagestyle{empty}
 
-\addtolength{\topmargin}{-30mm}
-\addtolength{\textheight}{50mm}
-\addtolength{\oddsidemargin}{-30mm}
-\addtolength{\textwidth}{60mm}
+\addtolength{\topmargin}{-20mm}
+\addtolength{\textheight}{40mm}
+\addtolength{\oddsidemargin}{-28mm}
+\addtolength{\textwidth}{50mm}
 
 \begin{document}
 
@@ -18,29 +18,38 @@
 
 \begin{description}
 
-\item[Personal data:]  Born in Saratov, Russian Federation, July 7, 1995. 
-Citizenship: Russian Federation. Married,  no children.
+\vspace{1mm}
 
-\item[Work mailing address:] \'Sniadeckich 8,  Warszawa,  Polska 00-656
+\item {\bf Personal data:}  Born in Saratov, Russian Federation, July 7, 1995. 
+Citizenship: Russian Federation. Married,  no children.
+\vspace{1mm}
+
+\item {\bf Work mailing address:} \'Sniadeckich 8,  Warszawa,  Polska 00-656
+\vspace{1mm}
 
 %\item[Home address:] 2ya Sadovaya ul. 65/71-11, Saratov, Russia,
 %410052.
 
-\item[E-mail:] {\tt rdeev[]impan.pl}
+\item {\bf E-mail:} {\tt rdeev[]impan.pl}
+\vspace{1mm}
 
-\item[Telegram:] {\tt t.me/deevrod}
+\item {\bf Telegram:} {\tt t.me/deevrod}
+\vspace{1mm}
 
-\item[Contact phone number:] +48-573-373-834
+\item {\bf Contact phone number:} +48-573-373-834
+\vspace{1mm}
 
-\item[Education:] \begin{itemize}
+\item {\bf Education:} \begin{itemize}
      \item 2021 \hspace{2mm} Ph.D. in Math. \hspace{2mm} Courant
      Institute of Mathematical Sciences~-- New York University
      \item 2016 \hspace{2mm} B.S. \hspace{2mm} National Research
      University~-- Higher School of Economics
 \end{itemize}
+\vspace{1mm}
 
-\item[Positions held:] \begin{itemize}
-     \item Oct.~2021---Sep.~2023 \hspace{2mm} IMPAN,  postdoc
+\item {\bf Positions held:} \begin{itemize}
+     \item Mar.~2024 (?)---Mar.  2025 \hspace{2mm} Universit\'e Libre de Bruxelles,  postdoc
+     \item Oct.~2021---Sep.~2023 \hspace{2mm} Institite of Mathematics,  Polish Academy of Sciences,  postdoc
      \item Sep.~2016---Apr.~2021 \hspace{2mm} Courant Institute of Mathematical Sciences,
      graduate student
      \item Mar.~--- Aug.~2016 \hspace{2mm} Laboratory of Algebraic Geometry
@@ -51,8 +60,9 @@ Citizenship: Russian Federation. Married,  no children.
 
 %\item[Short-term visiting positions:] \begin{itemize}
 %\end{itemize}
+\vspace{1mm}
 
-\item[Conferences:] \begin{itemize}
+\item {\bf Conferences:} \begin{itemize}
 \item Apr.~--- May 2016,  Warsaw,  IMPAN,  Polish Algebraic Geometry Mini-Semester
 \item Jul.  2022,  Gda\'nsk,  Fourth Killing--Weierstrass Colloquium
 \end{itemize}
@@ -63,8 +73,9 @@ Citizenship: Russian Federation. Married,  no children.
 %     \item M\"obius contest (2015), 3rd prize
 %     \item All-Russian Mathematical Olympiad (2010 and 2011), 2nd prize 
 %\end{itemize}
+\vspace{1mm}
 
-\item[Papers:] \begin{itemize}
+\item {\bf Papers and preprints:} \begin{itemize}
      \item Rodion N. D\'eev. {\em 
      Compact fibrations with hyperk\"ahler fibers} (2015), J.~of~Geo.~\& Phys., 
      Vol.~123, Jan.~2018, pp.~372--378, arXiv:1511.05332.
@@ -83,58 +94,11 @@ Citizenship: Russian Federation. Married,  no children.
      \item Rodion D\'eev,  Micha\l~Kapustka.  {\em Rational curves with unexpected
      behaviour},  in preparation
 \end{itemize}
+\vspace{1mm}
 
-\item[Research interests:] transcendental methods in algebraic geometry, 
-holomorphically symplectic manifolds, Teichm\"uller theory, Hodge theory, 
+\item {\bf Research interests:} transcendental methods in algebraic geometry, 
+Teichm\"uller theory, holomorphically symplectic manifolds, Hodge theory, 
 special holonomy, history of mathematics.
 
-%\item[Expository talks:] \begin{itemize}
-%     \item HSE, Geometric Structures seminar
-%          \begin{itemize}
-%               \item {\it Gromov and Buser inequalities}, 2015
-%               \item {\it Holomorphically Engel manifolds}, 2015
-%               \item {\it Liouville coverings}, 2015
-%               \item {\it (Co)-CR quaternionic manifolds and their twistors}, 2015
-%               \item {\it Complex structure on the Virasoro group}, 2015
-%               \item {\it  Dixmier--Douady theory}, 2014
-%               \item {\it CR-manifolds and a K\"ahler Structure on the Space of 
-%String World-Sheets}, 2014
-%               \item {\it On $h$-principle and specialness for complex projective 
-%manifolds}, 2014
-%          \end{itemize}
-%     \item IUM, Spectral Geometry seminar
-%          \begin{itemize}
-%               \item {\it Gromov, Buser and Cheng inequalities via the covers by metric 
-%balls}, 2015
-%          \end{itemize}
-%     \item IUM, Algebraic Varieties seminar
-%          \begin{itemize}
-%               \item {\it Bogomolov decomposition theorem}, 2015
-%          \end{itemize}
-%     \item XII International School on Theoretical \& Mathematical Physics, 
-%Sevastopol, 2013
-%          \begin{itemize}
-%               \item {\it Equivariant cohomology and localization}
-%          \end{itemize}
-% 
-%\end{itemize}
-%
-%\item[Teaching:] \begin{itemize}
-%     \item Teaching assistant, HSE:
-%          \begin{itemize}
-%               \item Lie Groups and Lie Algebras, Fall 2015 (joint with IUM)
-%               \item Dynamical Systems, Spring 2015
-%               \item Dynamical Systems, Fall 2014
-%          \end{itemize}
-%     \item Teaching assistant, IUM:
-%          \begin{itemize}
-%               \item Lie Groups and Lie Algebras, Fall 2015 (joint with HSE)
-%               \item Calculus I, Fall 2015
-%               \item Geometry, Fall 2015
-%               \item Differential Geometry, Spring 2015
-%               \item Calculus on manifolds, Fall 2014
-%          \end{itemize}
-%\end{itemize}
-%
 \end{description}
 \end{document}
