--- a/cv.tex
+++ b/cv.tex
@@ -90,7 +90,8 @@ Citizenship: Russian Federation. Married,  no children.
      %\item Rodion D\'eev,  Vasily Rogov.  {\em Holomorphic families of knots},  in 
      %preparation
      \item Anna Abasheva,  Rodion D\'eev.  {\em Complex surfaces with many 
-     algebraic  structures} (2023),  arXiv:2303.10764,  to appear in IMRN
+     algebraic  structures} (2023),  IMRN 2023;  rnad190,  
+     \url{https://doi.org/10.1093/imrn/rnad190},  arXiv:2303.10764
      \item Rodion D\'eev,  Micha\l~Kapustka.  {\em Rational curves with unexpected
      behaviour},  in preparation
 \end{itemize}
