--- a/cv.tex
+++ b/cv.tex
@@ -3,6 +3,8 @@
 
 \pagestyle{empty}
 
+\usepackage{url}
+
 \addtolength{\topmargin}{-20mm}
 \addtolength{\textheight}{40mm}
 \addtolength{\oddsidemargin}{-28mm}
